--- a/css/master.css
+++ b/css/master.css
@@ -3,12 +3,12 @@
 /* Text inside these asterisks and slashes are comments for human */
 
   a {
-    color: orange; /* set the text color to blue here */
+    color: blue; /* set the text color to blue here */
     text-decoration: none; /* This means we do not want hyperlinks to be underlined */
   }
 
   a:hover {
-    color: red; /* set the text color to red here */
+    color: yellow; /* set the text color to red here */
     text-decoration: none; /* This means we do not want hyperlinks to be underlined */
   }
 
