--- a/css/master.css
+++ b/css/master.css
@@ -8,7 +8,7 @@
   }
 
   a:hover {
-    color: yellow; /* set the text color to red here */
+    color: red; /* set the text color to red here */
     text-decoration: none; /* This means we do not want hyperlinks to be underlined */
   }
 
