--- a/css/master.css
+++ b/css/master.css
@@ -3,17 +3,17 @@
 /* Text inside these asterisks and slashes are comments for human */
 
   a {
-    color: blue; /* set the text color to blue here */
+    color: rgb(255, 68, 0); /* set the text color to blue here */
     text-decoration: none; /* This means we do not want hyperlinks to be underlined */
   }
 
   a:hover {
-    color: red; /* set the text color to red here */
+    color: rgba(165, 42, 42, 0.808); /* set the text color to red here */
     text-decoration: none; /* This means we do not want hyperlinks to be underlined */
   }
 
   body {
-    background-color: beige;/* set the background color here */
+    background-color: rgb(250, 168, 123);/* set the background color here */
     color: black;/* set the text color to black here */
     font-family: Arial, Helvetica, sans-serif;/* set the font here */
     text-align: center;/* set the text alignment here */
@@ -25,6 +25,7 @@
   }
 
   h1 {
+
     margin-bottom: 0.5rem;
     margin-top: 3rem;
    }
@@ -32,7 +33,7 @@
   h2 {
     margin-top: 2.5rem;
     margin-bottom: 2.5rem;
-    color: #075AAB; /* set the text color of to #075AAB here */
+    color: orangered; /* set the text color of to #075AAB here */
     /* set both the bottom margin and top margin to 2.5rem here */
    }
 
